Chore: Updated documentation, README.md (added project structure, program layers, general information, and sample output; other references made), and PicoController.java (remove unnecessary peripherals)